# gig-agents

./: .gitignore  .vsfavorite  AGENTS.md  CLAUDE.md  LICENSE  NOTICE  README.md  pyproject.toml
.github/: copilot-instructions.md
openspec/changes/add-interactive-cao-full-pipeline-demo/: design.md  proposal.md  tasks.md
openspec/changes/add-interactive-cao-full-pipeline-demo/specs/cao-interactive-full-pipeline-demo/: spec.md
openspec/changes/revise-cao-interactive-demo-tutorial-and-wrappers/: tasks.md
tests/fixtures/agents/: .gitignore
