[project]
name = "gig-agents"
version = "0.1.0"
description = "Distributed AI agent orchestration — dynamic, markdown-driven, built on CAO"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ai", "agents", "orchestration", "llm", "cli", "tmux", "cao"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    # CAO provides the foundational tmux + MCP layer
    "cli-agent-orchestrator>=1.1.0",
    # Web framework for HTTP endpoints
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    # CLI
    "click>=8.0.0",
    # TUI (Textual for the terminal dashboard)
    "textual>=0.80.0",
    # Markdown parsing for instruction broadcaster
    "python-frontmatter>=1.1.0",
    "watchdog>=6.0.0",
    # Data / models
    "pydantic>=2.10.0",
]

[project.scripts]
"gig" = "gig_agents.cli.main:cli"
"gig-server" = "gig_agents.api.main:main"

[project.urls]
Homepage = "https://github.com/igamenovoer/gig-agents"
Repository = "https://github.com/igamenovoer/gig-agents"
Issues = "https://github.com/igamenovoer/gig-agents/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gig_agents"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.9.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
